--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "hubot":         ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "githubot":      ">= 0.4.1 < 0.5.0"
+    "githubot":      ">= 0.4.1 < 0.5.0",
+    "underscore":    ">= 1.5.2 < 2.0.0"
   },
 
   "engines": {
