Add twit as dep

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hubot":             ">= 2.6.0 < 3.0.0",
     "hubot-scripts":     ">= 2.5.0 < 3.0.0",
     "githubot":          ">= 0.4.1 < 0.5.0",
+    "twit":              ">= 1.1.11 < 2.0.0",
     "underscore":        ">= 1.5.2 < 2.0.0",
     "underscore.string": ">= 2.3.3 < 3.0.0"
   },
