--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "githubot":          ">= 0.4.1 < 0.5.0",
     "twit":              ">= 1.1.11 < 2.0.0",
     "underscore":        ">= 1.5.2 < 2.0.0",
-    "underscore.string": ">= 2.3.3 < 3.0.0"
+    "underscore.string": ">= 2.3.3 < 3.0.0",
+    "url":               "",
+    "querystring":       ""
   },
 
   "engines": {
