--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "hyde",
   "version": "2.6.3",
-
   "author": "GitHub Inc.",
-
   "keywords": [
     "github",
     "hubot",
@@ -12,32 +10,30 @@
     "hyde",
     "jekyll"
   ],
-
   "description": "A robot for the best",
-
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/github/hubot/raw/master/LICENSE"
-  }],
-
-  "repository" : {
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/github/hubot/raw/master/LICENSE"
+    }
+  ],
+  "repository": {
     "type": "git",
     "url": "https://github.com/jekyll/hyde.git"
   },
-
   "dependencies": {
-    "hubot":             ">= 2.6.0 < 3.0.0",
-    "hubot-scripts":     ">= 2.5.0 < 3.0.0",
-    "githubot":          ">= 0.4.1 < 0.5.0",
-    "twit":              ">= 1.1.11 < 2.0.0",
-    "underscore":        ">= 1.5.2 < 2.0.0",
+    "hubot": ">= 2.6.0 < 3.0.0",
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "githubot": ">= 0.4.1 < 0.5.0",
+    "twit": ">= 1.1.11 < 2.0.0",
+    "underscore": ">= 1.5.2 < 2.0.0",
     "underscore.string": ">= 2.3.3 < 3.0.0",
-    "url":               "",
-    "querystring":       ""
+    "url": "",
+    "querystring": "",
+    "hubot-ascii-faces": "~1.0.0"
   },
-
   "engines": {
     "node": ">= 0.8.x",
-    "npm":  ">= 1.1.x"
+    "npm": ">= 1.1.x"
   }
 }
