--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "underscore.string": ">= 2.3.3 < 3.0.0",
     "url": "",
     "querystring": "",
-    "hubot-ascii-faces": "~1.0.2"
+    "hubot-ascii-faces": "~1.0.2",
+    "hubot-principles": "~1.0.0"
   },
   "engines": {
     "node": ">= 0.8.x",
