Integrate better with Twitter.
tweet_mention 'streams' our mentions to us in our Campfire room.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ export HUBOT_GITHUB_USER=yourGitHubBotUser
 export HUBOT_TWEETER_ACCOUNTS={"twitterHandle":{"access_token":"accessToken","access_token_secret":"accessTokenSecret"}}
 export HUBOT_TWITTER_CONSUMER_KEY=consumerKey
 export HUBOT_TWITTER_CONSUMER_SECRET=consumerSecret
+export HUBOT_TWITTER_MENTION_ROOM=0000000
