--- a/package.json
+++ b/package.json
@@ -26,15 +26,14 @@
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "githubot": ">= 0.4.1 < 0.5.0",
     "twit": ">= 1.1.11 < 2.0.0",
-    "underscore": ">= 1.5.2 < 2.0.0",
+    "underscore": "~1.5.2",
     "underscore.string": ">= 2.3.3 < 3.0.0",
-    "url": "",
-    "querystring": "",
     "hubot-ascii-faces": "~1.0.2",
-    "hubot-principles": "~1.0.0"
+    "hubot-principles": "~1.0.0",
+    "oauth": "~0.9.11"
   },
   "engines": {
-    "node": ">= 0.8.x",
-    "npm": ">= 1.1.x"
+    "node": "~0.10.24",
+    "npm": "~1.3.0"
   }
 }
