--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "querystring": "",
     "hubot-ascii-faces": "~1.0.2",
     "hubot-principles": "~1.0.0",
-    "hubot-pr-status": "~0.1.0"
+    "hubot-pr-status": "~0.1.0",
+    "hubot-github-pages": "~0.1.0"
   },
   "engines": {
     "node": ">= 0.8.x",
