--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "url": "https://github.com/jekyll/hyde.git"
   },
   "dependencies": {
-    "hubot": ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "githubot": ">= 0.4.1 < 0.5.0",
-    "twit": ">= 1.1.11 < 2.0.0",
-    "underscore": ">= 1.5.2 < 2.0.0",
-    "underscore.string": ">= 2.3.3 < 3.0.0",
-    "url": "",
-    "querystring": "",
+    "hubot": "~2.7.1",
+    "hubot-scripts": "~2.5.8",
+    "githubot": "~0.4.2",
+    "twit": "~1.1.12",
+    "underscore": "~1.6.0",
+    "underscore.string": "~2.3.3",
+    "url": "~0.7.9",
+    "querystring": "~0.2.0",
     "hubot-ascii-faces": "~1.0.2",
     "hubot-principles": "~1.0.0",
     "hubot-pr-status": "~0.1.0",
-    "hubot-github-pages": "~0.1.0"
+    "hubot-github-pages": "~1.0.0"
   },
   "engines": {
     "node": ">= 0.8.x",
