--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "hubot-ascii-faces": "~1.0.2",
     "hubot-principles": "~1.0.0",
     "hubot-pr-status": "~0.1.0",
-    "hubot-github-pages": "~1.0.0"
+    "hubot-github-pages": "~1.0.0",
+    "hubot-gif-me": "^1.0.0"
   },
   "engines": {
     "node": ">= 0.8.x",
