--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "querystring": "~0.2.0",
     "hubot-ascii-faces": "~1.0.2",
     "hubot-principles": "~1.0.0",
-    "hubot-pr-status": "~0.1.0",
+    "hubot-pr-status": "^0.1.1",
     "hubot-github-pages": "~1.0.0",
     "hubot-gif-me": "^1.0.0"
   },
