--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "hubot-gif-me": "^1.0.0"
   },
   "engines": {
-    "node": ">= 0.8.x",
-    "npm": ">= 1.1.x"
+    "node": "^0.10.26",
+    "npm": "^1.4.3"
   }
 }
