--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "hubot-principles": "~1.0.0",
     "hubot-pr-status": "~0.1.2",
     "hubot-github-pages": "~1.0.0",
-    "hubot-gif-me": "^1.0.0"
+    "hubot-gif-me": "^1.0.0",
+    "twitter-text": "^1.7.0"
   },
   "engines": {
     "node": "^0.10.26",
