--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "hubot-pr-status": "~0.1.2",
     "hubot-github-pages": "~1.0.0",
     "hubot-gif-me": "^1.0.0",
-    "twitter-text": "^1.7.0"
+    "twitter-text": "^1.7.0",
+    "hubot-tweeter": "^0.2.1"
   },
   "engines": {
     "node": "^0.10.26",
