--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "hubot-github-pages": "~1.0.0",
     "hubot-gif-me": "^1.0.0",
     "twitter-text": "^1.8.0",
-    "hubot-tweeter": "^0.2.1"
+    "hubot-tweeter": "^0.2.1",
+    "hubot-github-repo-event-notifier": "^1.2.0"
   },
   "engines": {
     "node": "^0.10.26",
