--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyde",
-  "version": "2.6.7",
+  "version": "2.7.0",
   "author": "GitHub Inc.",
   "keywords": [
     "github",
@@ -37,7 +37,7 @@
     "hubot-gif-me": "^1.0.0",
     "twitter-text": "^1.8.0",
     "hubot-tweeter": "^0.2.1",
-    "hubot-github-repo-event-notifier": "git://github.com/patcon/hubot-github-repo-event-notifier.git#accept-more-events"
+    "hubot-github-repo-event-notifier": "^1.3.0"
   },
   "engines": {
     "node": "^0.10.26",
