--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "hubot-gif-me": "^1.0.0",
     "twitter-text": "^1.8.0",
     "hubot-tweeter": "^0.2.1",
-    "hubot-github-repo-event-notifier": "^1.3.0"
+    "hubot-github-repo-event-notifier": "^1.3.0",
+    "hubot-seriouslyguys": "^1.0.0"
   },
   "engines": {
     "node": "^0.10.26",
