--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "twitter-text": "^1.8.0",
     "hubot-tweeter": "^0.2.1",
     "hubot-github-repo-event-notifier": "^1.3.0",
-    "hubot-seriouslyguys": "^1.0.0"
+    "hubot-seriouslyguys": "^1.0.0",
+    "hubot-auth": "^1.0.0"
   },
   "engines": {
     "node": "^0.10.26",
