--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "hubot-tweeter": "^0.2.1",
     "hubot-github-repo-event-notifier": "^1.3.0",
     "hubot-seriouslyguys": "^1.0.0",
-    "hubot-auth": "^1.0.0"
+    "hubot-auth": "^1.0.0",
+    "soupselect": "^0.2.0",
+    "htmlparser": "^1.7.7"
   },
   "engines": {
     "node": "^0.10.26",
