hubot-time-me plz

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "hubot-auth": "^1.0.0",
     "soupselect": "^0.2.0",
     "htmlparser": "^1.7.7",
-    "node-geocoder": "^1.4.0"
+    "hubot-time-me": "^1.0.0"
   },
   "engines": {
     "node": "^0.10.26",
