--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyde",
-  "version": "2.8.1",
+  "version": "2.8.2",
   "author": "GitHub Inc.",
   "keywords": [
     "github",
@@ -37,12 +37,12 @@
     "hubot-gif-me": "^1.0.0",
     "twitter-text": "^1.8.0",
     "hubot-tweeter": "^0.2.1",
-    "hubot-github-repo-event-notifier": "^1.3.0",
     "hubot-seriouslyguys": "^1.0.0",
     "hubot-auth": "^1.0.0",
     "soupselect": "^0.2.0",
     "htmlparser": "^1.7.7",
-    "hubot-time-me": "^1.0.0"
+    "hubot-time-me": "^1.0.0",
+    "hubot-github-repo-event-notifier": "^1.3.2"
   },
   "engines": {
     "node": "^0.10.26",
