--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyde",
-  "version": "2.8.2",
+  "version": "3",
   "author": "GitHub Inc.",
   "keywords": [
     "github",
@@ -34,7 +34,6 @@
     "hubot-principles": "~1.0.0",
     "hubot-pr-status": "~0.1.2",
     "hubot-github-pages": "~1.0.0",
-    "hubot-gif-me": "^1.0.0",
     "twitter-text": "^1.8.0",
     "hubot-tweeter": "^0.2.1",
     "hubot-seriouslyguys": "^1.0.0",
@@ -42,7 +41,8 @@
     "soupselect": "^0.2.0",
     "htmlparser": "^1.7.7",
     "hubot-time-me": "^1.0.0",
-    "hubot-github-repo-event-notifier": "^1.3.2"
+    "hubot-github-repo-event-notifier": "^1.3.2",
+    "hubot-gif-me": "^1.1.0"
   },
   "engines": {
     "node": "^0.10.26",
