Update some thingies.

--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
   },
   "dependencies": {
     "hubot": "^2.7.2",
-    "hubot-scripts": "~2.5.8",
+    "hubot-scripts": "^2.5.11",
     "githubot": "^0.4.2",
-    "twit": "~1.1.12",
-    "underscore": "~1.6.0",
-    "underscore.string": "~2.3.3",
-    "url": "~0.7.9",
-    "querystring": "~0.2.0",
+    "twit": "^1.1.13",
+    "underscore": "^1.6.0",
+    "underscore.string": "^2.3.3",
+    "url": "^0.7.9",
+    "querystring": "^0.2.0",
     "hubot-ascii-faces": "~1.0.2",
-    "hubot-principles": "~1.0.0",
-    "hubot-pr-status": "~0.1.2",
-    "hubot-github-pages": "~1.0.0",
-    "twitter-text": "^1.8.0",
-    "hubot-tweeter": "^0.2.1",
+    "hubot-principles": "^1.0.0",
+    "hubot-pr-status": "^0.1.2",
+    "hubot-github-pages": "^1.0.0",
+    "twitter-text": "^1.9.0",
+    "hubot-tweeter": "^0.2.2",
     "hubot-seriouslyguys": "^1.0.0",
     "hubot-auth": "^1.0.0",
     "soupselect": "^0.2.0",
