--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyde",
-  "version": "2.9.7",
+  "version": "2.10.0",
   "author": "GitHub Inc.",
   "keywords": [
     "github",
@@ -22,29 +22,28 @@
     "url": "https://github.com/jekyll/hyde.git"
   },
   "dependencies": {
-    "optparse": "",
-    "coffee-script": "1.7.0",
-    "hubot": "^2.7.2",
-    "hubot-scripts": "^2.5.11",
     "githubot": "^0.4.2",
+    "htmlparser": "^1.7.7",
+    "hubot": "^2.7.2",
+    "hubot-ascii-faces": "~1.0.2",
+    "hubot-auth": "^1.0.0",
+    "hubot-gif-me": "^1.1.1",
+    "hubot-github-pages": "^1.0.0",
+    "hubot-github-repo-event-notifier": "^1.3.2",
+    "hubot-pr-status": "^0.1.2",
+    "hubot-principles": "^1.0.0",
+    "hubot-scripts": "^2.5.11",
+    "hubot-seriouslyguys": "^1.0.0",
+    "hubot-time-me": "^1.0.0",
+    "hubot-tweeter": "^0.2.2",
+    "optparse": "^1.0.5",
+    "querystring": "^0.2.0",
+    "soupselect": "^0.2.0",
     "twit": "^1.1.13",
+    "twitter-text": "^1.9.0",
     "underscore": "^1.6.0",
     "underscore.string": "^2.3.3",
-    "url": "^0.7.9",
-    "querystring": "^0.2.0",
-    "hubot-ascii-faces": "~1.0.2",
-    "hubot-principles": "^1.0.0",
-    "hubot-pr-status": "^0.1.2",
-    "hubot-github-pages": "^1.0.0",
-    "twitter-text": "^1.9.0",
-    "hubot-tweeter": "^0.2.2",
-    "hubot-seriouslyguys": "^1.0.0",
-    "hubot-auth": "^1.0.0",
-    "soupselect": "^0.2.0",
-    "htmlparser": "^1.7.7",
-    "hubot-time-me": "^1.0.0",
-    "hubot-github-repo-event-notifier": "^1.3.2",
-    "hubot-gif-me": "^1.1.1"
+    "url": "^0.7.9"
   },
   "engines": {
     "node": "^0.10.26",
