--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "hubot-ascii-faces": "~1.0.2",
     "hubot-auth": "^1.0.0",
     "hubot-gif-me": "^1.2.0",
-    "hubot-github-pages": "^1.0.0",
+    "hubot-github-pages": "git://github.com/parkr/hubot-github-pages#versions",
     "hubot-github-repo-event-notifier": "^1.3.2",
     "hubot-pr-status": "^0.1.2",
     "hubot-principles": "^1.0.0",
