--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
     "url": "https://github.com/jekyll/hyde.git"
   },
   "dependencies": {
-    "githubot": "^0.4.2",
+    "githubot": "^1.0.0",
     "htmlparser": "^1.7.7",
-    "hubot": "^2.17.0",
-    "hubot-ascii-faces": "~1.0.2",
-    "hubot-auth": "^1.0.0",
+    "hubot": "^2.19.0",
+    "hubot-ascii-faces": "^1.0.2",
+    "hubot-auth": "^1.2.0",
     "hubot-gif-me": "^1.2.0",
     "hubot-github-pages": "^1.1.0",
-    "hubot-github-repo-event-notifier": "^1.3.2",
+    "hubot-github-repo-event-notifier": "^1.6.0",
     "hubot-pr-status": "^0.1.2",
     "hubot-principles": "^1.0.0",
-    "hubot-scripts": "^2.16.2",
+    "hubot-scripts": "^2.17.2",
     "hubot-seriouslyguys": "^1.0.0",
-    "hubot-slack": "^2.2.0",
-    "hubot-time-me": "^1.0.0",
-    "hubot-tweeter": "^0.3.0",
+    "hubot-slack": "^3.4.2",
+    "hubot-time-me": "^1.1.0",
+    "hubot-tweeter": "^0.3.2",
     "optparse": "^1.0.5",
     "querystring": "^0.2.0",
     "soupselect": "^0.2.0",
-    "twit": "^1.1.20",
-    "twitter-text": "^1.9.0",
-    "underscore": "^1.6.0",
-    "underscore.string": "^2.4.0",
-    "url": "^0.7.9"
+    "twit": "^2.2.4",
+    "twitter-text": "^1.13.4",
+    "underscore": "^1.8.3",
+    "underscore.string": "^3.3.4",
+    "url": "^0.11.0"
   }
 }
